--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,3 +54,15 @@ body {
 .filmItemContainer:hover .filmItemThumb {
     top: -100%;
 }
+
+.yt-container {
+    padding-bottom: 56.25%;
+    width: 100%;
+    position: relative;
+}
+
+.yt-container iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
